# python-project-lvl4

./: .env  .gitignore  Makefile  Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: ci-check.yml
task_manager/: .gitignore  settings.py  urls.py  views.py
task_manager/templates/: base.html  index_test.html  navbar.html  signin.html
