[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["alekorn"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.7"
gunicorn = "^20.1.0"
python-dotenv = "^0.17.0"
django-bootstrap4 = "^3.0.1"
django-bootstrap5 = "^2.1.1"
dj-database-url = "^1.2.0"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
